Bug 1210784 - Layer tree invalidation with Preserves3D. r=roc